--- a/index.html
+++ b/index.html
@@ -18,14 +18,10 @@
                             <br>
                             That Belies In the Great Ideas
                           </h1>
-                          <div class="two">
+                        <div class="two">
                             <div class="works">
-                                <div class="see">
-                                    <p>See Our Works</p>
-                                </div>
-                                <div class="connect">
-                                    <p>Connect with us</p>
-                                </div>
+                                <button class="see">See Our Works</button>
+                                <button class="connect">Connect with us</button>
                             </div>
                             <div class="arrow">
                                 <img src="./arrow-down (2).svg" alt="">
